# parallax

./: .gitignore  .sconsign.dblite  CMakeLists.txt  Makefile  SConstruct  compile_commands.json  face_tracker  face_tracker.cpp  face_tracker_dnn.py  face_tracker_mediapipe.py  face_tracker_v2.py  haarcascade.py  mediapipe_godot.py  next_steps.md  performance_metrics_HaarCascade.txt  project-manual.md  readme.md  requirements.txt  statistical analysis.py  todo.md
Face_detection/: mediapipe_godot.py
Face_detection/Distance_estimator/: facedistance_estimation.py
Face_detection/Mediapipe/: Face_angle.py  face_tracker_mediapipe.py  performance_metrics.py  utils.py
Testing/: Tested system information.txt  face_tracker_dnn_testing.py  face_tracker_mediapipe_test.py  haarcascade_testing.py  performance_metrics.py
Testing/Raman/: performance_results_dnn.txt  (+1 more)
face_detection/: main.py
face_tracker/: .gitignore  camera_manager.py  face_tracker.py  main.py  notes.md  performance_metrics.py  requirements.txt  ui.py  utils.py
face_tracking/: face_detector.py  face_landmarker.py  main.py  requirements.txt  ui.py  utils.py
godot_project/: OSC.gd  camera_3d.gd  control.gd  default_env.tres  export_presets.cfg  game_manager.gd  icon.png.import  icon.svg.import  main.gd  main.tscn  processing_times.txt  project.godot  scene2.tscn  scene2_camera_3d.gd  secondary.gd  transmission_times.txt  udp_listener.gd  ui.gd  uiSewer.gd  uiTunnel.gd
perf_metrics/: compute_averages.py  female_head_shake.ogx  test_female.ogv
src/: register_types.cpp  register_types.hpp  register_types.os
(+4357 files in other folders)
